# mango_hybit

./: -requirements.txt  .gitignore  .gitlab-ci.yml  AUTHORS.txt  CHANGELOG.txt  Dockerfile  README.md  a.py  agent_messages.py  cells.json  cells.py  fl.csv  mas.py  mass.py  methods.py  mosaik_agents.py  ppw.py  ppw_test.py  profiles.json  pvgis_cache.faas  pvgis_cache.faas.old  pyproject.toml  requirements.txt  scalability.py  scalability_results.csv  scalability_time.csv  scenario - Copy.py  scenario.py  simulation_time.csv  temp_results.csv  utils.py
Resources/: Diagram.drawio
_mosaik_components/flexible/: flexiload_simulator.py
_mosaik_components/mas/: cells.py  methods.py  mosaik_agents.py  utils.py
_mosaik_components/pv/: pvgis_simulator.py
data/: co2_default_emission_factor.csv  co2_intensity.csv  example_data.csv  pandapower_example.json  wind_speed_m-s_15min.csv
demo/: cells.py  cells_example.json  cells_net.json  cells_net.py  create_cells.py  pandapower_example.json
example/: cells.py  grid_model.py  grid_profiles.py  methods.py  run.py  scenario.py
examples/: cells.py  grid_profiles.py  methods.py  requirements.txt  scenario.py  scenario.py.bak
massca/: __init__.py  agent_messages.py  mosaik_agents.py  utils.py
misc/: mas.drawio  mas.flow.drawio  mas.msg.drawio  massca.drawio
results/: scalability_time.csv  simulation_time.csv
scalability/: cells.py  compose.yaml  dockerfile  methods.py  requirements - Copy.txt  requirements.txt  scalability.py  scenario.py
tests/: test_cohda.py  test_mosaik_agent.py  test_swarm.py  test_wecs_agent.py
(+82 files in other folders)
