[tool.poetry]
name = "massca"
version = "0.1.0"
description = "Scalable multi-agent system framework for power cell co-simulation"
authors = ["Danila Valko <mosaik@offis.de>"]
license = "LICENSE.txt"
readme = ["README.md", "CHANGELOG.txt", "AUTHORS.txt"]
packages = [{include = "mosaik_components"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"