[tool.poetry]
name = "massca"
version = "0.1.0"
description = "Scalable multi-agent system framework for power cell co-simulation"
authors = ["Danila Valko <mosaik@offis.de>"]
license = "LICENSE.txt"
readme = ["README.md", "CHANGELOG.txt", "AUTHORS.txt"]
packages = [{include = "massca"}]

[tool.poetry.dependencies]
python = "^3.9"
mango_agents = "^1.1.2"
mosaik = "^3.2.0"
mosaik_api_v3 = "^3.0.7"
nest_asyncio = "^1.5.8"
termcolor = "^2.4.0"
networkx = "^2.5"
pandas = "^2.2.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"